--- a/goods/src/main/res/values/strings.xml
+++ b/goods/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">goods</string>
+
+    <string name="content_empty">这里还没有商品~</string>
+    <string name="goods_detail">商品详情</string>
 </resources>
