--- a/goods/src/main/res/values/strings.xml
+++ b/goods/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="content_empty">这里还没有商品~</string>
     <string name="goods_detail">商品详情</string>
+    <string name="goods_desc">详细数据</string>
 </resources>
