--- a/order/src/main/res/values/strings.xml
+++ b/order/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">order</string>
+    <string name="set_default">设为默认</string>
+    <string name="user_mobile">电话</string>
+    <string name="edit">编辑</string>
 </resources>
