--- a/mine/src/main/res/values/strings.xml
+++ b/mine/src/main/res/values/strings.xml
@@ -5,9 +5,10 @@
     <!--关于页面-->
     <string name="about_app">about app</string>
     <string name="about_app_text">\n
-        1.使用Kotlin语言开发\n
+        1.100% Kotlin语言开发\n
         2.采用MVP软件设计架构\n
-        3.搭建通用框架\n
+        3.单Activity架构，所有页面由Fragment完成\n
+        4.模块化开发，模块间高度解耦
     </string>
     <string name="sourceCode">source code</string>
     <string name="sourceCodeUrl">https://github.com/sukaidev/KotlinMall</string>
@@ -27,10 +28,16 @@
         7.com.google.dagger:dagger:2.11\n
         8.com.trello:rxlifecycle-kotlin:1.0\n
         9.com.eightbitlab:rxbus:1.0.2\n
-        10.com.github.bumptech.glide:glide:4.9.0\n
-        11.com.jph.takephoto:takephoto_library:4.0.3\n
-        12.com.alibaba:arouter-api:1.5.0\n
-        13.com.youth.banner:banner:1.4.10\n
-        14.de.hdodenhof:circleimageview:3.0.0
+        10.me.yokeyword:fragmentation:1.3.7\n
+        11.com.ashokvarma.android:bottom-navigation-bar:2.1.0\n
+        12.com.github.bumptech.glide:glide:4.9.0\n
+        13.com.jph.takephoto:takephoto_library:4.0.3\n
+        14.com.alibaba:arouter-api:1.5.0\n
+        15.com.wang.avi:library:2.1.3\n
+        16.com.alibaba:fastjson:1.1.71.android\n
+        17.me.dm7.barcodescanner:zbar:1.9.13\n
+        18.com.youth.banner:banner:1.4.10\n
+        19.com.bigkoo:alertview:1.0.3\n
+        20.com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.47
     </string>
 </resources>
